--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       <artifactId>jsonic</artifactId>
       <version>1.3.9</version>
     </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>sas</finalName>
